objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>BPM_Product_Status_Last_Update__c</fullName>
        <description>Data/Time when the BPM Product status was last modified.</description>
        <label>BPM Product Status Last Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BPM_Product_Status__c</fullName>
        <description>Status of the product into BPM execution flow.</description>
        <label>BPM Product Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initiated</fullName>
                </value>
                <value>
                    <fullName>Ongoing</fullName>
                </value>
                <value>
                    <fullName>Requires Input</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estructura__c</fullName>
        <inlineHelpText>plazo, amortización, periodo de gracia, pago de intereses, etc</inlineHelpText>
        <label>Estructura</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Garantia__c</fullName>
        <label>Garantía</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Moneda__c</fullName>
        <label>Moneda</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CLP</fullName>
                </value>
                <value>
                    <fullName>CLF</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monto__c</fullName>
        <label>Monto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <validationRules>
        <fullName>Price_Should_Be_Zero</fullName>
        <active>true</active>
        <errorConditionFormula>UnitPrice &lt;&gt; 0</errorConditionFormula>
        <errorDisplayField>UnitPrice</errorDisplayField>
        <errorMessage>Precio de Ventas debe ser siempre ZERO</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Quantity_Must_Be_One</fullName>
        <active>true</active>
        <errorConditionFormula>Quantity &lt;&gt; 1</errorConditionFormula>
        <errorDisplayField>Quantity</errorDisplayField>
        <errorMessage>Cantidad debe ser siempre 1</errorMessage>
    </validationRules>
</CustomObject>